--- a/logging/pino-sample/package.json
+++ b/logging/pino-sample/package.json
@@ -14,12 +14,14 @@
     "express": "^4.18.2",
     "pino": "^8.14.1",
     "pino-http": "^8.3.3",
-    "pino-http-print": "^3.1.0"
+    "pino-http-print": "^3.1.0",
+    "pino-http-send": "^0.4.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.0",
     "@types/pino": "^7.0.5",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
