--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,10 +1,10 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: System
 metadata:
-  name: pino-sample
+  name: nodejs-reference-architecture
   annotations:
     github.com/project-slug: diegotroitino/nodejs-reference-architecture
 spec:
-  type: logging-sample
+  type: reference-architecture
   lifecycle: experimental
   owner: diego.troitino
